# django-start

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Dockerfile-no-venv  Dockerfile-pip  LICENSE  Pipfile  README.md  db.sqlite3  docker-compose-prod_template.yml  docker-compose.yml  drun  env  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  run  setup.cfg
.github/workflows/: django.yml  django_tests.yml  lint_multi-arch.yml  nox-audit_multi-arch.yml  nox-coverage.yml  nox-docs_current.yml  nox-lint_multi-arch.yml  nox-safety_multi-arch.yml  nox-tests_multi-arch.yml  tests.yml
accounts/: admin.py  forms.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_bio_customuser_name.py  0003_customuser_age_customuser_country_and_more.py
accounts/tests/: factories.py  test_forms.py  test_models.py  test_signup_page.py  test_urls.py  test_views.py
config/: __init__.py  asgi.py  settings.py  test.py  urls.py  wsgi.py
docs/: changelog.rst  conf.py  configuring.rst  contributing.rst  django-start_package_index.txt  docker_postgres_migration.md  features.rst  index.rst  installing.rst  package_index.md  package_index.rst  testing.rst
docs/html/: changelog.html  contributing.html  genindex.html  index.html  license.html  search.html  searchindex.js
docs/html/_static/: documentation_options.js  pygments.css
docs/html/_static/scripts/: furo.js  furo.js.map
docs/html/_static/styles/: furo-extensions.css  furo-extensions.css.map  furo.css  furo.css.map
docs/html/configuration/: env_setup.html  index.html  server_startup.html
docs/html/features/: application_features.html  dev_test_features.html  django_debug_toolbar.html  index.html  package_index.html  run_command_features.html
docs/html/installation/: docker_installation.html  index.html  local_installation.html
docs/html/testing/: create_new_users.html  index.html
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst
docs/source/configuration/: env_setup.rst  index.rst  server_startup.rst
docs/source/features/: application_features.rst  dev_test_features.rst  django_debug_toolbar.rst  index.rst  run_command_features.rst
docs/source/installation/: docker_installation.rst  index.rst  local_installation.rst
docs/source/testing/: create_new_users.rst  index.rst
htmlcov/: class_index.html  coverage.json  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_21411594f0ec1795_0001_initial_py.html  d_21411594f0ec1795_0002_customuser_bio_customuser_name_py.html  d_21411594f0ec1795_0003_customuser_age_customuser_country_and_more_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  d_b88c3b5a8ce6a61b_test_forms_py.html  d_b88c3b5a8ce6a61b_test_views_py.html  d_dfdacaa496597cde_factories_py.html  d_dfdacaa496597cde_test_forms_py.html  d_dfdacaa496597cde_test_models_py.html  d_dfdacaa496597cde_test_pages_py.html  d_dfdacaa496597cde_test_urls_py.html  d_dfdacaa496597cde_test_views_py.html  function_index.html  index.html  status.json  z_1ea838694151cac8_test_py.html  z_1ea838694151cac8_urls_py.html  z_509fd8af0f7a1b49_admin_py.html  z_509fd8af0f7a1b49_apps_py.html  z_509fd8af0f7a1b49_forms_py.html  z_509fd8af0f7a1b49_models_py.html  z_509fd8af0f7a1b49_urls_py.html  z_509fd8af0f7a1b49_views_py.html  z_9df13ddeb1e47e46_admin_py.html  z_9df13ddeb1e47e46_apps_py.html  (+11 more)
pages/: tests.py  urls.py  views.py
pages/tests/: test_forms.py  test_views.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/css/: base.2a2f509e2aac.css
templates/: about.html  base.html  home.html
templates/account/: base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  user_detail.html  user_form.html
templates/account/email/: email_confirmation_message.txt  email_confirmation_subject.txt  password_reset_key_subject.txt
templates/admin/: base_site.html
templates/pages/: about.html  contact.html  home.html  sample.html  sample2.html  sample3.html  success.html
templates/registration/: email.html  login.html  logout.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
templates/socialaccount/: login.html
