[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
)/
'''

[tool.coverage.paths]
source = ["accounts", "config", "pages"]

[tool.coverage.run]
branch = true
source = ["config"]
omit = [
    "*/__init__.py",
    "*manage.py",
    "*settings*.py",
    "*urls.py",
    "*admin.py",
    "*migrations/*",
    "*tests/*",
    "*test_*.py",
    "*tests.py",
    "*wsgi.py",
    "*conftest.py",
    "*/extra*",
]
plugins = [
    "django_coverage_plugin",
]

[tool.coverage.django_coverage_plugin]
template_extensions = "html, txt, tex, email"

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 79

[tool.poetry]
name = "django_start"
version = "0.1.0"
description = "Basic Django project template"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
environs = {extras = ["django"], version = "^9.5.0"}
psycopg2-binary = "^2.9.3"
django-crispy-forms = "^1.14.0"
django-extensions = "^3.1.5"
pytest-sugar = "^0.9.4"
django-allauth = "^0.51.0"
Pillow = "^9.1.1"
django-countries = "^7.3.2"
whitenoise = "5.3.0"
gunicorn = "~=20.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"
django-debug-toolbar = "^3.4.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-cov = "^3.0.0"
django-extensions = "^3.1.5"
ipython = "^8.4.0"
friendly = "^0.5.26"
colorama = "^0.4.4"
django-coverage-plugin = "^2.0.3"
factory-boy = "3.0.1"
django-pytest = "^0.2.0"
django-test-plus = "^2.2.0"
nox = "^2022.1.7"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.6.0"
Sphinx = "^5.0.2"
flake8 = "4.0.1"
flake8-bandit = "^3.0.0"
safety = "^2.1.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::django.utils.deprecation.RemovedInDjango41Warning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
